--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,4 @@ out/
 .vscode/
 
 ### mysql ###
-!**/src/main/resources/application-mysql.properties
+/src/main/resources/application-mysql.properties
