--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,5 +53,5 @@ jobs:
           --application-name sobunsobun-app
           --deployment-group-name codedeploy-deployment-group
           --file-exists-behavior OVERWRITE
-          --s3-location bucket=omnm-deploy,bundleType=zip,key=$GITHUB_SHA.zip
+          --s3-location bucket=sobunsobun-bucket,bundleType=zip,key=$GITHUB_SHA.zip
           --region ap-northeast-2
