--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.30'
+	//spring security 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.2'
+	//jwt token 의존성 추가
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 tasks.named('test') {
