--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ out/
 
 ### mysql ###
 /src/main/resources/application-mysql.properties
+
+### s3 ###
+/src/main/resources/application-s3.properties
