--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,11 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java:8.0.30'
 	//spring security 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.5'
-	//jwt token 의존성 추가
+	// jwt token 의존성 추가
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	// s3 bucket 의존성 추가
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
 }
 
 tasks.named('test') {
